force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/MVN_In_Network_Treatment_Site__c.object-meta.xml
<CustomObject>
    <label>In-Network Treatment Site</label>
    <nameField>
        <displayFormat>INTS-{00000}</displayFormat>
        <label>In-Network Treatment Site Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Network Treatment Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>