force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_City__c.field-meta.xml
<CustomField>
    <fullName>MVN_City__c</fullName>
    <description>Primary Address city for the treatment site</description>
    <formula>MVN_Treatment_Site__r.PJN_Primary_Address__r.PJN_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>