force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Member_Plan__c</fullName>
    <label>Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>In-Network Treatment Sites</relationshipLabel>
    <relationshipName>In_Network_Treatment_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>