force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Phone__c</fullName>
    <description>Primary Phone for the treatment site</description>
    <formula>MVN_Treatment_Site__r.PJN_Primary_Phone_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>