force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_State__c.field-meta.xml
<CustomField>
    <fullName>MVN_State__c</fullName>
    <description>Primary Address state for the treatment site</description>
    <formula>TEXT(MVN_Treatment_Site__r.PJN_Primary_Address__r.PJN_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>