force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>MVN_Street_Address__c</fullName>
    <description>Address Line 1 &amp; 2</description>
    <formula>MVN_Treatment_Site__r.PJN_Primary_Address__r.PJN_Address_Line_1__c + &quot; &quot; + MVN_Treatment_Site__r.PJN_Primary_Address__r.PJN_Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>