force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_Treatment_Site__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site__c</fullName>
    <label>Treatment Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MVN_Treatment_Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>In-Network Member Plans</relationshipLabel>
    <relationshipName>In_Network_Treatment_Sites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>