force-app/main/default/src/objects/MVN_In_Network_Treatment_Site__c/fields/MVN_ZIp__c.field-meta.xml
<CustomField>
    <fullName>MVN_ZIp__c</fullName>
    <description>Primary Address postal code for the treatment site</description>
    <formula>MVN_Treatment_Site__r.PJN_Primary_Address__r.PJN_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZIp</label>
    <type>Text</type>
</CustomField>